--- a/src/bear-paw-button/index.pug
+++ b/src/bear-paw-button/index.pug
@@ -1,3 +1,5 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src="./gsap.min.js")
+  script(src="./GSDevTools.min.js")
