--- a/src/bear-paw-button/style.styl
+++ b/src/bear-paw-button/style.styl
@@ -21,64 +21,13 @@ body
 
 button
   --hovered 0
+  cursor pointer
   padding 0
   margin 0
   border 0
   appearance none
   background transparent
-
-.like
-  font-size 26px
-  // transform scale(0.5)
-
-  &__container
-    display inline-flex
-    align-items center
-    justify-content center
-    border 4px solid var(--stroke)
-    border-radius 10px
-    height 100%
-    padding 26px 36px
-    overflow hidden
-    position relative
-
-  &__text
-    color hsl(0, 0%, 20%)
-    font-variation-settings 'wght' 400
-    font-size 2rem
-    margin-left 24px
-    opacity 0
-
-    &--traveller
-      display inline-block
-      position absolute
-      top 50%
-      left 50%
-      opacity calc(1 - var(--hovered))
-      margin 0
-      transform translate(-50%, -50%) translate(0, calc(var(--hovered) * 200%))
-      transition transform var(--transition), opacity var(--transition)
-
-  &__number
-    font-variation-settings 'wght' 700
-    color hsl(0, 0%, 50%)
-    font-size 2rem
-    letter-spacing -2px
-    margin-left 14px
-
-  &__feature
-    height 34px
-    width 34px
-    background hsla(0, 100%, 50%, 0.25)
-    transform translate(-6px, 0) translate(calc(var(--hovered) * 150%), 0)
-    transition transform var(--transition)
-
-  &__heart
-    height 100%
-    position absolute
-    top 50%
-    left 50%
-    transform translate(-50%, -50%)
+  position relative
 
 button:hover
   --hovered 1
@@ -86,6 +35,10 @@ button:hover
 .heart
   overflow visible !important
   height 100%
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
   opacity calc(1 - var(--hovered, 0))
 
   &__outline
@@ -126,7 +79,7 @@ button:hover
     align-items center
     justify-content center
     position relative
-    // overflow hidden
+    overflow hidden
 
   &__paws
     height 100%
@@ -174,7 +127,7 @@ button:hover
     line-height var(--font-size)
     opacity calc(1 - var(--hovered, 0))
     transition transform var(--transition), opacity var(--transition)
-    transform translateY(calc(var(--hovered, 0) * 100%))
+    transform translateY(calc(var(--hovered, 0) * 80%))
 
   &__outline
     position absolute
@@ -214,9 +167,12 @@ button:hover
   height calc(var(--font-size) * 2)
   width calc(var(--font-size) * 2)
   top 50%
-  left 50%
+  left 38%
   transform translate(-50%, -50%)
   z-index 4
+  display none
+  // Important for CodePen
+  overflow visible !important
 
 .paw
   height calc(var(--font-size) * 2)
@@ -228,17 +184,43 @@ button:hover
 
   &--left
     background orange
+
   &--right
     z-index 5
     background white
+    top 125%
+    left 55%
 
 .bear-paw
   position absolute
   height 150%
   opacity var(--hovered, 0)
-  opacity 1
   transition var(--transition)
-  overflow visible
+  // Important for CodePen
+  overflow visible !important
   left 50%
   top 0
   transform translate(-50%, -14%)
+
+.wiggle
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
+  height 100px
+  overflow visible !important
+  display none
+  z-index 10
+
+.dashed
+  height 100%
+  overflow visible !important
+
+  &__container
+    display none
+    top 50%
+    left 50%
+    height 100px
+    position absolute
+    transform translate(-50%, -50%)
+    z-index 11
