--- a/src/bear-paw-button/dev.pug
+++ b/src/bear-paw-button/dev.pug
@@ -27,7 +27,6 @@ button.transformer
           span.number.number--next.number--single 9
   include slap.pug
   span.transformer__outline.transformer__outline--top
-  span.transformer__outline.transformer__outline--bottom
   - let w = 0
   while w < 8
     include wiggle.pug
@@ -42,3 +41,12 @@ button.transformer
         g.dashed__wrapper(clip-path="url(#lineClip)")
           path.dashed__line(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="2" stroke="black" stroke-width="0.75")
     - d++
+  - let b = 0
+  while b < 2
+    .burst
+      - let c = 0
+      while c < 4
+        svg.burst__line(viewBox="-0.25, -0.25 0.5 30" style=`--index: ${c};`)
+          path(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="32" stroke="black" stroke-width="1.5")
+        - c++
+    - b++
