--- a/src/bear-paw-button/bear-palm.pug
+++ b/src/bear-paw-button/bear-palm.pug
@@ -4,25 +4,25 @@ svg.bear-paw(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 34.611 55.365')
     circle(cx='51.121' cy='167.071' r='1.323')
     circle(cx='61.421' cy='167.732' r='1.323')
     circle(cx='69.075' cy='171.417' r='1.323')
-    path(fill='#a05a2c' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.246' d='M52.665 167.163c-2.333.002-4.55 1.149-6.074 3.142a4.037 4.037 0 00-.478-.036c-4.67.567-5.742 5.429-5.779 8.991-.048 4.657 1.305 8.702 1.514 13.09.445 9.37-.567 28.14-.567 28.14h29.886s-.2-18.156.567-27.188c.373-4.398 1.814-8.794 1.96-13.097.123-3.618-2.536-8.965-6.13-8.965a4.704 4.704 0 00-1.345.208c-1.388-2.135-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875c-1.38-1.154-3.05-1.779-4.766-1.783z')
-    path(fill='#d38d5f' d='M55.386 167.708c-2.627.541-4.348 4.247-5.596 6.946-1.308 2.829-1.573 6.074-1.746 9.187-.257 4.6.846 9.394 1.054 13.781.427 8.97-.261 21.241-.34 22.735l22.409.133s-.2-18.155.567-27.188c.373-4.398 1.814-8.794 1.96-13.096.123-3.619-2.536-8.966-6.13-8.966a4.704 4.704 0 00-1.345.208c-1.388-2.134-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875 7.783 7.783 0 00-2.045-1.238z')
-    path(fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.587' d='M52.665 167.163c-2.333.002-4.55 1.149-6.074 3.142a4.037 4.037 0 00-.478-.036c-4.67.567-5.742 5.429-5.779 8.991-.048 4.657 1.305 8.702 1.514 13.09.445 9.37-.567 28.14-.567 28.14h29.886s-.2-18.156.567-27.188c.373-4.398 1.814-8.794 1.96-13.097.123-3.618-2.536-8.965-6.13-8.965a4.704 4.704 0 00-1.345.208c-1.388-2.135-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875c-1.38-1.154-3.05-1.779-4.766-1.783z')
-    ellipse(cx='50.143' cy='188.41' fill='#ff8080' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794' rx='8.724' ry='6.159' transform='matrix(1 -.00427 .03389 .99943 0 0)')
-    path(fill='#ffd5d5' d='M58.589 182.14a8.728 6.154 1.436 00-8.247 6.185 8.728 6.154 1.436 006.665 5.911 8.728 6.154 1.436 008.245-6.186 8.728 6.154 1.436 00-6.663-5.91z')
-    ellipse(cx='50.143' cy='188.41' fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794' rx='8.724' ry='6.159' transform='matrix(1 -.00427 .03389 .99943 0 0)')
+    path.stroked.bear-one.bear-one--dark(stroke-linecap='round' stroke-linejoin='round' stroke-width='1.246' d='M52.665 167.163c-2.333.002-4.55 1.149-6.074 3.142a4.037 4.037 0 00-.478-.036c-4.67.567-5.742 5.429-5.779 8.991-.048 4.657 1.305 8.702 1.514 13.09.445 9.37-.567 28.14-.567 28.14h29.886s-.2-18.156.567-27.188c.373-4.398 1.814-8.794 1.96-13.097.123-3.618-2.536-8.965-6.13-8.965a4.704 4.704 0 00-1.345.208c-1.388-2.135-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875c-1.38-1.154-3.05-1.779-4.766-1.783z')
+    path.bear-one.bear-one--light(d='M55.386 167.708c-2.627.541-4.348 4.247-5.596 6.946-1.308 2.829-1.573 6.074-1.746 9.187-.257 4.6.846 9.394 1.054 13.781.427 8.97-.261 21.241-.34 22.735l22.409.133s-.2-18.155.567-27.188c.373-4.398 1.814-8.794 1.96-13.096.123-3.619-2.536-8.966-6.13-8.966a4.704 4.704 0 00-1.345.208c-1.388-2.134-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875 7.783 7.783 0 00-2.045-1.238z')
+    path.stroked(fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.587' d='M52.665 167.163c-2.333.002-4.55 1.149-6.074 3.142a4.037 4.037 0 00-.478-.036c-4.67.567-5.742 5.429-5.779 8.991-.048 4.657 1.305 8.702 1.514 13.09.445 9.37-.567 28.14-.567 28.14h29.886s-.2-18.156.567-27.188c.373-4.398 1.814-8.794 1.96-13.097.123-3.618-2.536-8.965-6.13-8.965a4.704 4.704 0 00-1.345.208c-1.388-2.135-3.475-3.375-5.68-3.377a6.14 6.14 0 00-3.108.875c-1.38-1.154-3.05-1.779-4.766-1.783z')
+    ellipse.bear-pad.bear-pad--light.stroked(cx='50.143' cy='188.41' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794' rx='8.724' ry='6.159' transform='matrix(1 -.00427 .03389 .99943 0 0)')
+    path.bear-pad.bear-pad--dark(d='M58.589 182.14a8.728 6.154 1.436 00-8.247 6.185 8.728 6.154 1.436 006.665 5.911 8.728 6.154 1.436 008.245-6.186 8.728 6.154 1.436 00-6.663-5.91z')
+    ellipse.stroked(cx='50.143' cy='188.41' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794' rx='8.724' ry='6.159' transform='matrix(1 -.00427 .03389 .99943 0 0)')
     g(transform='translate(29.867 -10.156)')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='#ff8080' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
-      path(fill='#ffd5d5' d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      circle.bear-pad.bear-pad--light.stroked(cx='16.124' cy='188.105' r='3.274' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      path.bear-pad.bear-pad--dark(d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
+      circle.stroked(cx='16.124' cy='188.105' r='3.274' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
     g(transform='translate(36.816 -14.767)')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='#ff8080' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
-      path(fill='#ffd5d5' d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      circle.bear-pad.bear-pad--light.stroked(cx='16.124' cy='188.105' r='3.274' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      path.bear-pad.bear-pad--dark(d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
+      circle.stroked(cx='16.124' cy='188.105' r='3.274' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
     g(transform='translate(45.035 -12.361)')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='#ff8080' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
-      path(fill='#ffd5d5' d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      circle.bear-pad.bear-pad--light.stroked(cx='16.124' cy='188.105' r='3.274' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      path.bear-pad.bear-pad--dark(d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
+      circle.stroked(cx='16.124' cy='188.105' r='3.274' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
     g(transform='translate(52.184 -7.15)')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='#ff8080' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
-      path(fill='#ffd5d5' d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
-      circle(cx='16.124' cy='188.105' r='3.274' fill='none' stroke='#000' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      circle.bear-pad.bear-pad--light.stroked(cx='16.124' cy='188.105' r='3.274' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
+      path.bear-pad.bear-pad--dark(d='M16.916 184.933a3.274 3.274 0 00-2.479 3.172 3.274 3.274 0 002.482 3.173 3.274 3.274 0 002.479-3.173 3.274 3.274 0 00-2.482-3.172z')
+      circle.stroked(cx='16.124' cy='188.105' r='3.274' fill='none' stroke-linecap='round' stroke-linejoin='round' stroke-width='.794')
