--- a/src/bear-paw-button/dev.pug
+++ b/src/bear-paw-button/dev.pug
@@ -1,11 +1,3 @@
-
-//- button.like
-//-   .like__container
-//-     .like__feature
-//-       include heart.svg
-//-     span.like__text.like__text--spacer(aria-hidden="true") Like
-//-     span.like__text.like__text--traveller Like
-//-     span.like__number 12
 button.transformer
   span.transformer__container
     span.transformer__front.transformer__segment
@@ -28,8 +20,9 @@ button.transformer
   include slap.pug
   span.transformer__outline.transformer__outline--top
   - let w = 0
-  while w < 8
-    include wiggle.pug
+  while w < 20
+    svg.wiggle(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 3.456 27.798')
+      path.wiggle__line.celebration-line(fill='none' stroke-linecap='round' stroke-dasharray="32" stroke-width='1.323' d='M1.736 27.128S.528 24.968.678 23.821c.17-1.298 2.117-1.999 2.117-3.308 0-1.308-2.117-1.998-2.117-3.307s2.117-1.998 2.117-3.307S.678 11.9.678 10.592c0-1.31 2.117-1.999 2.117-3.308 0-1.309-1.948-2.01-2.117-3.307C.528 2.829 1.736.67 1.736.67')
     - w++
   - let d = 0
   while d < 5
@@ -37,9 +30,9 @@ button.transformer
       svg.dashed(viewBox="-0.25 -0.25 0.5 30")
         defs
           clipPath#lineClip
-            rect(height="31" width="1" fill="red" x="-0.5" y="-0.5")
+            rect(height="31" width="1" x="-0.5" y="-0.5")
         g.dashed__wrapper(clip-path="url(#lineClip)")
-          path.dashed__line(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="2" stroke="black" stroke-width="0.75")
+          path.dashed__line.celebration-line(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="2" stroke-width="0.75")
     - d++
   - let b = 0
   while b < 2
@@ -47,6 +40,6 @@ button.transformer
       - let c = 0
       while c < 4
         svg.burst__line(viewBox="-0.25, -0.25 0.5 30" style=`--index: ${c};`)
-          path(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="32" stroke="black" stroke-width="1.5")
+          path.celebration-line(d="M 0 0, L 0 30" stroke-linecap="round" stroke-dasharray="32" stroke-width="1.5")
         - c++
     - b++
