--- a/src/bear-paw-button/style.styl
+++ b/src/bear-paw-button/style.styl
@@ -1,16 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@699;700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap')
 
 *
   box-sizing border-box
 
 :root
   --pink hsl(326, 98%, 82%)
+  --pink-bg hsl(325, 90%, 98%)
   --pink-light hsl(325, 93%, 95%)
   --pink-dark hsl(326, 78%, 65%)
-  --stroke hsl(0, 0%, 60%)
-  --text hsl(0, 0%, 20%)
-  --number hsl(0, 0%, 50%)
-  --stroke-active hsl(0, 0%, 5%)
+  --button-bg hsl(0, 0%, 100%)
+  --stroke hsl(180, 3%, 94%)
+  --text hsl(180, 6%, 19%)
+  --number hsl(180, 2%, 67%)
+  --color hsl(180, 2%, 77%)
+  --heart-stroke hsl(180, 2%, 77%)
+  --stroke-active hsl(204, 6%, 16%)
   --transition 0.2s
 
 body
@@ -18,6 +22,21 @@ body
   place-items center
   min-height 100vh
   font-family "Roboto", sans-serif
+  background url('https://assets.codepen.io/605876/heart-outline-bg.svg')
+  background-position calc(var(--x, 50) * 1%) calc(var(--y, 50) * 1%)
+
+  &:after
+    content ''
+    position absolute
+    opacity var(--backdrop-opacity, 0)
+    top 0
+    right 0
+    bottom 0
+    left 0
+    z-index -1
+    background url('https://assets.codepen.io/605876/heart-bg.svg'), var(--pink-bg)
+    background-position calc(var(--x, 50) * 1%) calc(var(--y, 50) * 1%)
+
 
 button
   --hovered 0
@@ -28,9 +47,29 @@ button
   appearance none
   background transparent
   position relative
+  display none
 
 button:hover
   --hovered 1
+
+.stroked
+  stroke var(--stroke-active)
+
+.bear-one
+  &--light
+    fill hsl(29, 59%, 40%)
+  &--dark
+    fill hsl(29, 59%, 23%)
+.bear-two
+  &--light
+    fill hsl(51, 98%, 92%)
+  &--dark
+    fill hsl(45, 99%, 68%)
+.bear-pad
+  &--light
+    fill hsl(24, 57%, 65%)
+  &--dark
+    fill hsl(24, 57%, 85%)
 
 .heart
   overflow visible !important
@@ -44,18 +83,14 @@ button:hover
   &__outline
     stroke var(--stroke-active)
     stroke-width 1.25px
-    opacity 0
   &__baseline
-    stroke var(--stroke)
+    stroke var(--color)
     stroke-width 1.25px
   &__body
-    opacity 0
     fill var(--pink)
   &__shine
-    opacity 0
     fill var(--pink-light)
   &__shadow
-    opacity 0
     fill var(--pink-dark)
 
 
@@ -91,16 +126,16 @@ button:hover
     z-index 2
 
   &__front
-    background hsla(0, 80%, 50%, 0.5)
     padding var(--padding-v) calc(var(--padding-t) + var(--padding-b)) var(--padding-v) var(--padding-h)
+    padding 0 calc(var(--padding-t) + var(--padding-b)) 0 var(--padding-h)
     border var(--border-width) solid var(--stroke)
     border-radius var(--border-radius) 0 0 var(--border-radius)
     border-right 0
     z-index 2
 
   &__middle
-    background hsla(210, 80%, 50%, 0.5)
     padding var(--padding-v) var(--padding-t)
+    padding 0 var(--padding-t)
     border var(--border-width) solid var(--stroke)
     border-radius 0
     border-left 0
@@ -109,16 +144,16 @@ button:hover
   &__back
     border var(--border-width) solid var(--stroke)
     border-radius 0 var(--border-radius) var(--border-radius) 0
-    background hsla(120, 80%, 50%, 0.5)
     padding var(--padding-v) var(--padding-h) var(--padding-v) var(--padding-b)
+    padding 0 var(--padding-h) 0 var(--padding-b)
     border-left 0
     z-index 2
 
   &__number
     font-size var(--font-size)
-    line-height var(--font-size)
+    // line-height var(--font-size)
     height var(--font-size)
-    color var(--number)
+    color var(--color)
     transform translate(6px, 0)
 
   &__text
@@ -141,6 +176,12 @@ button:hover
     z-index 10
     transform translate3d(-50%, 0, 0)
 
+  &__segment
+    background var(--button-bg)
+    display flex
+    align-items center
+    justify-content center
+    height 92px
 
   &__feature
     height var(--font-size)
@@ -148,7 +189,6 @@ button:hover
     width var(--font-size)
     transition transform var(--transition)
     transform translate(-6px, 0) translateX(calc(var(--hovered, 0) * 100%))
-    background hsla(280, 80%, 50%, 0.5)
 
 .number
   position absolute
