--- a/src/splat-path/dev.pug
+++ b/src/splat-path/dev.pug
@@ -1,1 +1,9 @@
-.splatted
+mixin splat(hue, hoverR, activeR, hoverS, activeS)
+  .splatted(style=`--hue: ${hue}; --hover-rotate: ${hoverR}; --active-rotate: ${activeR}; --hover-scale: ${hoverS}; --active-scale: ${activeS};`)
+    .splatted__image
+      img(src="https://assets.codepen.io/605876/me--standing.png")
+      img(src="https://assets.codepen.io/605876/me--noticing.png")
+      img(src="https://assets.codepen.io/605876/me--falling.png")
++splat(110, -10, -30, 1.15, 0.75)
++splat(10, -5, 10, 1.2, 0.85)
++splat(210, 10, 25, 1.1, 0.8)
